[package]
name = "meshtastic-gate"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
dotenv = "0.15.0"
log = "0.4.21"
clap = { version = "4.5.3", features = ["derive", "cargo"] }
pretty_env_logger = "0.5.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.33"
tokio = { version = "1.36.0", features = ["full"] }
huawei-modem = "0.2.2"
tokio-core = "0.1.18"
futures = "0.3.30"

# tokio-io = "0.1"
# tokio-codec = "0.1"
# failure = "0.1"
# failure_derive = "0.1"
# nom = "3.2"
# num = "0.1"
# num-derive = "0.1"
# bytes = "0.4"